--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "bundle/vim-webapi"]
 	path = bundle/vim-webapi
 	url = https://github.com/mattn/webapi-vim.git
+[submodule "bundle/vim-fakeclip"]
+	path = bundle/vim-fakeclip
+	url = git://github.com/kana/vim-fakeclip.git
